src/components/shroud/tests/names/top.h

// top.h
// This is generated code, do not edit
/**
 * \file top.h
 * \brief Shroud generated wrapper for testnames library
 */
// For C users and C++ implementation

#ifndef TOP_H
#define TOP_H

#ifdef __cplusplus
extern "C" {
#endif

// declaration of wrapped types

// splicer begin C_definition
// splicer end C_definition

void YYY_TES_function1();

void c_name_special();

void YYY_TES_function3a_0(int i);

void YYY_TES_function3a_1(long i);

int YYY_TES_function4();

#ifdef __cplusplus
}
#endif

#endif  // TOP_H